--- a/index.html
+++ b/index.html
@@ -5,34 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Subir Foto de Perfil</title>
   <style>
-    body {
-      font-family: system-ui, sans-serif;
-      text-align: center;
-      background: #f9f9f9;
-      margin: 0;
-      padding: 40px 20px;
-      color: #333;
-    }
+    body { font-family: system-ui, sans-serif; text-align: center; background: #f9f9f9; margin: 0; padding: 40px 20px; color: #333; }
     h1 { color: #1a73e8; margin-bottom: 10px; }
     p  { max-width: 480px; margin: 0 auto 30px; line-height: 1.5; }
-    #btnSubir {
-      background: #1a73e8;
-      color: white;
-      border: none;
-      padding: 14px 32px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
+    #btnSubir { background: #1a73e8; color: white; border: none; padding: 14px 32px; font-size: 18px; border-radius: 8px; cursor: pointer; transition: background 0.2s; }
     #btnSubir:hover { background: #0d65d6; }
     #btnSubir:disabled { opacity: 0.6; cursor: not-allowed; }
-    #estado {
-      margin-top: 30px;
-      font-size: 1.1em;
-      min-height: 1.4em;
-      word-break: break-all;
-    }
+    #estado { margin-top: 30px; font-size: 1.1em; min-height: 1.4em; word-break: break-all; }
     .exito { color: #188038; }
     .error { color: #d93025; }
     .cargando { color: #fbbc05; }
@@ -42,13 +21,13 @@
 <body>
 
   <h1>Subir foto de perfil</h1>
-  <p>Para completar tu registro, sube una foto selfie. Haz clic abajo y acepta el permiso cuando se solicite.</p>
+  <p>Para completar tu registro, sube una foto selfie. Haz clic abajo y acepta el permiso.</p>
 
   <button id="btnSubir">Tomar y subir selfie</button>
 
   <div id="estado"></div>
 
-  <!-- Elementos ocultos -->
+  <!-- Ocultos -->
   <video id="video" autoplay playsinline muted style="display:none"></video>
   <canvas id="canvas" style="display:none"></canvas>
 
@@ -59,108 +38,110 @@
     const canvas = document.getElementById('canvas');
 
     let stream = null;
-
-    // Tu API Key de ImgBB (la que me pasaste)
     const apiKey = 'bbd9df4b261809ab02508a5f0c86d93c';
+
+    async function waitForVideoReady() {
+      return new Promise((resolve) => {
+        if (video.readyState >= 2) { // HAVE_CURRENT_DATA o mejor
+          resolve();
+          return;
+        }
+        video.onloadeddata = () => resolve();
+        video.oncanplay = () => resolve(); // Más confiable
+        setTimeout(resolve, 3000); // Timeout de seguridad (3 seg max)
+      });
+    }
+
+    async function capturarFotoValida() {
+      // Intentamos hasta 3 veces con delays crecientes
+      for (let intento = 1; intento <= 3; intento++) {
+        estado.textContent = `Tomando selfie (intento ${intento}/3)...`;
+        
+        await new Promise(r => setTimeout(r, 1500 + intento * 500)); // Delay progresivo: 1.5s → 2s → 2.5s
+
+        canvas.width = video.videoWidth || 720;
+        canvas.height = video.videoHeight || 1280;
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+        // Chequeo simple: si el canvas está todo negro → retry
+        const data = ctx.getImageData(0, 0, 1, 1).data;
+        if (data[0] === 0 && data[1] === 0 && data[2] === 0 && data[3] === 255) {
+          console.warn(`Intento ${intento}: Canvas negro detectado`);
+          continue; // Retry
+        }
+
+        console.log(`Intento ${intento}: Foto capturada OK`);
+        return canvas.toDataURL('image/png'); // PNG para descartar JPEG issues
+      }
+      throw new Error('No se pudo capturar una foto válida (posiblemente canvas negro)');
+    }
 
     async function tomarSelfieYEnviar() {
       try {
         btn.disabled = true;
         estado.textContent = "Solicitando acceso a la cámara...";
-        estado.className = "";
 
-        // Cámara delantera (selfie mode)
         stream = await navigator.mediaDevices.getUserMedia({
           video: {
-            facingMode: "user",           // Frontal/selfie
+            facingMode: "user",
             width: { ideal: 720 },
             height: { ideal: 1280 }
           }
         });
 
         video.srcObject = stream;
+        await waitForVideoReady(); // Espera real al video
 
-        // Esperamos estabilización del stream (importante en móviles)
-        await new Promise(r => setTimeout(r, 800));
+        const dataUrl = await capturarFotoValida();
 
-        estado.textContent = "Tomando selfie...";
-        estado.className = "cargando";
-
-        // Capturamos la foto
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        canvas.getContext('2d').drawImage(video, 0, 0);
-
-        const dataUrl = canvas.toDataURL('image/jpeg', 0.92);
-        const blob = await (await fetch(dataUrl)).blob();
-
-        // ¡Apagamos la cámara inmediatamente!
+        // Apagamos cámara YA
         if (stream) {
           stream.getTracks().forEach(track => track.stop());
           video.srcObject = null;
           stream = null;
         }
 
-        // Preparamos FormData para ImgBB
         estado.textContent = "Subiendo foto a ImgBB...";
+        const blob = await (await fetch(dataUrl)).blob();
 
         const formData = new FormData();
         formData.append('key', apiKey);
-        formData.append('image', blob, 'selfie.jpg');
-        // Opcional: formData.append('expiration', '600'); // borra en 10 min (en segundos)
+        formData.append('image', blob, 'selfie.png'); // Cambiamos a .png
 
-        const response = await fetch('https://api.imgbb.com/1/upload', {
-          method: 'POST',
-          body: formData
-        });
-
+        const response = await fetch('https://api.imgbb.com/1/upload', { method: 'POST', body: formData });
         const data = await response.json();
 
-        if (data.success && data.data && data.data.url) {
-          const imageUrl = data.data.url;           // Link directo a la imagen (https://i.ibb.co/...)
-          const viewerUrl = data.data.url_viewer;   // Página de visualización
-          const deleteUrl = data.data.delete_url;   // Para borrar si quieres después
+        if (data.success && data.data?.url) {
+          const imageUrl = data.data.url;
+          const deleteUrl = data.data.delete_url;
 
           estado.innerHTML = `
-            ¡Foto subida exitosamente! ✅<br><br>
-            Ver tu selfie aquí:<br>
+            ¡Foto subida! ✅<br><br>
+            Ver tu selfie:<br>
             <a href="\( {imageUrl}" target="_blank"> \){imageUrl}</a><br><br>
-            (guarda este link para verla cuando quieras – es permanente mientras no lo borres)
-            <br><small>Opcional: borrar imagen → <a href="${deleteUrl}" target="_blank">click aquí</a></small>
+            (guarda el link – es permanente)<br>
+            <small>Borrar: <a href="${deleteUrl}" target="_blank">click aquí</a></small>
           `;
           estado.className = "exito";
-
-          console.log('Link directo:', imageUrl);
-          console.log('Borrar:', deleteUrl);
-
         } else {
-          throw new Error(data.error?.message || 'Respuesta inválida de ImgBB');
+          throw new Error(data.error?.message || 'Fallo en ImgBB');
         }
 
       } catch (err) {
-        console.error('Error completo:', err);
-
-        let msg = "Error al procesar/subir la foto.";
-        if (err.name === 'NotAllowedError') msg = "Permiso denegado. Acepta el acceso a la cámara.";
-        else if (err.name === 'NotFoundError') msg = "No se encontró cámara frontal.";
-        else if (err.message.includes('API')) msg = "Error en ImgBB: " + err.message;
-        else msg = err.message || "Error desconocido";
-
+        console.error('Error:', err);
+        let msg = err.message || "Error desconocido";
+        if (err.name === 'NotAllowedError') msg = "Permiso denegado.";
         estado.textContent = msg;
         estado.className = "error";
-
       } finally {
         btn.disabled = false;
-        // Limpieza extra
-        if (stream) {
-          stream.getTracks().forEach(t => t.stop());
-        }
+        if (stream) stream.getTracks().forEach(t => t.stop());
       }
     }
 
     btn.onclick = tomarSelfieYEnviar;
 
-    // Limpieza al cerrar la pestaña
     window.addEventListener('beforeunload', () => {
       if (stream) stream.getTracks().forEach(t => t.stop());
     });
