--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Subir Foto de Perfil</title>
+  <title>Subir Foto de Perfil - Fix Negro</title>
   <style>
     body { font-family: system-ui, sans-serif; text-align: center; background: #f9f9f9; margin: 0; padding: 40px 20px; color: #333; }
     h1 { color: #1a73e8; margin-bottom: 10px; }
     p  { max-width: 480px; margin: 0 auto 30px; line-height: 1.5; }
-    #btnSubir { background: #1a73e8; color: white; border: none; padding: 14px 32px; font-size: 18px; border-radius: 8px; cursor: pointer; transition: background 0.2s; }
-    #btnSubir:hover { background: #0d65d6; }
+    #btnSubir { background: #1a73e8; color: white; border: none; padding: 14px 32px; font-size: 18px; border-radius: 8px; cursor: pointer; }
     #btnSubir:disabled { opacity: 0.6; cursor: not-allowed; }
     #estado { margin-top: 30px; font-size: 1.1em; min-height: 1.4em; word-break: break-all; }
     .exito { color: #188038; }
     .error { color: #d93025; }
     .cargando { color: #fbbc05; }
     a { color: #1a73e8; text-decoration: underline; }
+    #debugImg { max-width: 300px; margin: 20px auto; border: 2px solid #ccc; display: none; }
   </style>
 </head>
 <body>
 
   <h1>Subir foto de perfil</h1>
-  <p>Para completar tu registro, sube una foto selfie. Haz clic abajo y acepta el permiso.</p>
+  <p>Haz clic abajo y acepta el permiso. (Prueba en HTTPS o localhost)</p>
 
   <button id="btnSubir">Tomar y subir selfie</button>
 
   <div id="estado"></div>
+  <img id="debugImg" alt="Debug: foto capturada localmente">
 
   <!-- Ocultos -->
   <video id="video" autoplay playsinline muted style="display:none"></video>
@@ -36,51 +37,90 @@
     const estado = document.getElementById('estado');
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
+    const debugImg = document.getElementById('debugImg');
 
     let stream = null;
     const apiKey = 'bbd9df4b261809ab02508a5f0c86d93c';
 
-    async function waitForVideoReady() {
-      return new Promise((resolve) => {
-        if (video.readyState >= 2) { // HAVE_CURRENT_DATA o mejor
+    // Espera hasta que el video tenga datos reales
+    function waitForVideoReady() {
+      return new Promise((resolve, reject) => {
+        const timeout = setTimeout(() => reject(new Error('Timeout: video no listo')), 8000);
+
+        video.onloadedmetadata = () => {
+          console.log('loadedmetadata disparado');
+        };
+
+        video.oncanplay = () => {
+          console.log('canplay disparado - video debería tener frame');
+          clearTimeout(timeout);
           resolve();
-          return;
+        };
+
+        video.onerror = (e) => {
+          console.error('Error en video:', e);
+          reject(e);
+        };
+
+        // Si ya está listo
+        if (video.readyState >= 2) {
+          console.log('Video ya listo al inicio');
+          clearTimeout(timeout);
+          resolve();
         }
-        video.onloadeddata = () => resolve();
-        video.oncanplay = () => resolve(); // Más confiable
-        setTimeout(resolve, 3000); // Timeout de seguridad (3 seg max)
       });
     }
 
-    async function capturarFotoValida() {
-      // Intentamos hasta 3 veces con delays crecientes
-      for (let intento = 1; intento <= 3; intento++) {
-        estado.textContent = `Tomando selfie (intento ${intento}/3)...`;
-        
-        await new Promise(r => setTimeout(r, 1500 + intento * 500)); // Delay progresivo: 1.5s → 2s → 2.5s
+    // Captura con chequeo anti-negro
+    async function capturarFoto() {
+      for (let intento = 1; intento <= 4; intento++) {
+        estado.textContent = `Capturando selfie (intento ${intento}/4)...`;
+        await new Promise(r => setTimeout(r, 1200)); // delay entre intentos
 
-        canvas.width = video.videoWidth || 720;
-        canvas.height = video.videoHeight || 1280;
+        const width = video.videoWidth || 640;
+        const height = video.videoHeight || 480;
+        canvas.width = width;
+        canvas.height = height;
+
         const ctx = canvas.getContext('2d');
-        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-        // Chequeo simple: si el canvas está todo negro → retry
-        const data = ctx.getImageData(0, 0, 1, 1).data;
-        if (data[0] === 0 && data[1] === 0 && data[2] === 0 && data[3] === 255) {
-          console.warn(`Intento ${intento}: Canvas negro detectado`);
-          continue; // Retry
+        // Fondo blanco para evitar negro por transparencias en JPEG
+        ctx.fillStyle = '#ffffff';
+        ctx.fillRect(0, 0, width, height);
+
+        ctx.drawImage(video, 0, 0, width, height);
+
+        // Chequeo rápido si es negro (muestra promedio de 4 píxeles)
+        const sample = ctx.getImageData(width/2, height/2, 2, 2).data;
+        let isBlack = true;
+        for (let i = 0; i < sample.length; i += 4) {
+          if (sample[i] > 20 || sample[i+1] > 20 || sample[i+2] > 20) {
+            isBlack = false;
+            break;
+          }
         }
 
-        console.log(`Intento ${intento}: Foto capturada OK`);
-        return canvas.toDataURL('image/png'); // PNG para descartar JPEG issues
+        const dataUrl = canvas.toDataURL('image/jpeg', 0.95);
+
+        // Debug: mostrar localmente
+        debugImg.src = dataUrl;
+        debugImg.style.display = 'block';
+
+        if (!isBlack) {
+          console.log(`Intento ${intento}: OK - no negro`);
+          return dataUrl;
+        } else {
+          console.warn(`Intento ${intento}: Detectado negro`);
+        }
       }
-      throw new Error('No se pudo capturar una foto válida (posiblemente canvas negro)');
+      throw new Error('No se capturó imagen válida (sigue negra después de varios intentos)');
     }
 
     async function tomarSelfieYEnviar() {
       try {
         btn.disabled = true;
-        estado.textContent = "Solicitando acceso a la cámara...";
+        estado.textContent = "Abriendo cámara... Acepta el permiso";
+        debugImg.style.display = 'none';
 
         stream = await navigator.mediaDevices.getUserMedia({
           video: {
@@ -91,52 +131,48 @@
         });
 
         video.srcObject = stream;
-        await waitForVideoReady(); // Espera real al video
+        await waitForVideoReady();
 
-        const dataUrl = await capturarFotoValida();
+        const dataUrl = await capturarFoto();
 
-        // Apagamos cámara YA
+        // Apagar cámara
         if (stream) {
           stream.getTracks().forEach(track => track.stop());
-          video.srcObject = null;
           stream = null;
+          video.srcObject = null;
         }
 
-        estado.textContent = "Subiendo foto a ImgBB...";
-        const blob = await (await fetch(dataUrl)).blob();
+        estado.textContent = "Subiendo a ImgBB...";
 
+        const blob = await (await fetch(dataUrl)).blob();
         const formData = new FormData();
         formData.append('key', apiKey);
-        formData.append('image', blob, 'selfie.png'); // Cambiamos a .png
+        formData.append('image', blob, 'selfie.jpg');
 
-        const response = await fetch('https://api.imgbb.com/1/upload', { method: 'POST', body: formData });
-        const data = await response.json();
+        const res = await fetch('https://api.imgbb.com/1/upload', {
+          method: 'POST',
+          body: formData
+        });
+        const data = await res.json();
 
         if (data.success && data.data?.url) {
-          const imageUrl = data.data.url;
-          const deleteUrl = data.data.delete_url;
-
-          estado.innerHTML = `
-            ¡Foto subida! ✅<br><br>
-            Ver tu selfie:<br>
-            <a href="\( {imageUrl}" target="_blank"> \){imageUrl}</a><br><br>
-            (guarda el link – es permanente)<br>
-            <small>Borrar: <a href="${deleteUrl}" target="_blank">click aquí</a></small>
-          `;
+          const url = data.data.url;
+          const del = data.data.delete_url;
+          estado.innerHTML = `¡Subida OK! Ver foto:<br><a href="\( {url}" target="_blank"> \){url}</a><br><br>Borrar: <a href="${del}" target="_blank">aquí</a>`;
           estado.className = "exito";
         } else {
-          throw new Error(data.error?.message || 'Fallo en ImgBB');
+          throw new Error(data.error?.message || 'Fallo ImgBB');
         }
 
       } catch (err) {
-        console.error('Error:', err);
-        let msg = err.message || "Error desconocido";
-        if (err.name === 'NotAllowedError') msg = "Permiso denegado.";
-        estado.textContent = msg;
+        console.error(err);
+        estado.textContent = 'Error: ' + (err.message || 'Desconocido');
         estado.className = "error";
       } finally {
         btn.disabled = false;
-        if (stream) stream.getTracks().forEach(t => t.stop());
+        if (stream) {
+          stream.getTracks().forEach(t => t.stop());
+        }
       }
     }
 
