--- a/index.html
+++ b/index.html
@@ -3,33 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Subir Foto de Perfil - Fix Negro</title>
+  <title>Subir Foto de Perfil - Versión Funcional Android</title>
   <style>
-    body { font-family: system-ui, sans-serif; text-align: center; background: #f9f9f9; margin: 0; padding: 40px 20px; color: #333; }
+    body {
+      font-family: system-ui, sans-serif;
+      text-align: center;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 40px 20px;
+      color: #333;
+    }
     h1 { color: #1a73e8; margin-bottom: 10px; }
-    p  { max-width: 480px; margin: 0 auto 30px; line-height: 1.5; }
-    #btnSubir { background: #1a73e8; color: white; border: none; padding: 14px 32px; font-size: 18px; border-radius: 8px; cursor: pointer; }
+    p { max-width: 480px; margin: 0 auto 30px; line-height: 1.5; }
+    #btnSubir {
+      background: #1a73e8;
+      color: white;
+      border: none;
+      padding: 14px 32px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
     #btnSubir:disabled { opacity: 0.6; cursor: not-allowed; }
-    #estado { margin-top: 30px; font-size: 1.1em; min-height: 1.4em; word-break: break-all; }
+    #estado {
+      margin-top: 30px;
+      font-size: 1.1em;
+      min-height: 1.4em;
+      word-break: break-all;
+    }
     .exito { color: #188038; }
     .error { color: #d93025; }
     .cargando { color: #fbbc05; }
     a { color: #1a73e8; text-decoration: underline; }
-    #debugImg { max-width: 300px; margin: 20px auto; border: 2px solid #ccc; display: none; }
+    #debugImg {
+      max-width: 300px;
+      margin: 20px auto;
+      border: 2px solid #ccc;
+      display: none;
+    }
+    #video {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      opacity: 0.01; /* Truco: forzar render en Android/Chrome móvil */
+      pointer-events: none;
+    }
   </style>
 </head>
 <body>
 
   <h1>Subir foto de perfil</h1>
-  <p>Haz clic abajo y acepta el permiso. (Prueba en HTTPS o localhost)</p>
+  <p>Haz clic abajo, acepta el permiso y espera unos segundos. Prueba varias veces si falla la primera.</p>
 
   <button id="btnSubir">Tomar y subir selfie</button>
 
   <div id="estado"></div>
-  <img id="debugImg" alt="Debug: foto capturada localmente">
+  <img id="debugImg" alt="Debug: vista previa local (deberías ver tu cara aquí)">
 
-  <!-- Ocultos -->
-  <video id="video" autoplay playsinline muted style="display:none"></video>
+  <video id="video" autoplay playsinline muted></video>
   <canvas id="canvas" style="display:none"></canvas>
 
   <script>
@@ -42,132 +73,120 @@
     let stream = null;
     const apiKey = 'bbd9df4b261809ab02508a5f0c86d93c';
 
-    // Espera hasta que el video tenga datos reales
-    function waitForVideoReady() {
-      return new Promise((resolve, reject) => {
-        const timeout = setTimeout(() => reject(new Error('Timeout: video no listo')), 8000);
-
-        video.onloadedmetadata = () => {
-          console.log('loadedmetadata disparado');
-        };
-
-        video.oncanplay = () => {
-          console.log('canplay disparado - video debería tener frame');
-          clearTimeout(timeout);
-          resolve();
-        };
-
-        video.onerror = (e) => {
-          console.error('Error en video:', e);
-          reject(e);
-        };
-
-        // Si ya está listo
-        if (video.readyState >= 2) {
-          console.log('Video ya listo al inicio');
-          clearTimeout(timeout);
-          resolve();
-        }
-      });
+    // Función para chequear si el canvas tiene contenido (no negro)
+    function tieneContenido(ctx, w, h) {
+      if (w <= 0 || h <= 0) return false;
+      const data = ctx.getImageData(10, 10, 1, 1).data; // píxel cualquiera
+      return data[0] > 20 || data[1] > 20 || data[2] > 20; // no todo negro
     }
 
-    // Captura con chequeo anti-negro
-    async function capturarFoto() {
-      for (let intento = 1; intento <= 4; intento++) {
-        estado.textContent = `Capturando selfie (intento ${intento}/4)...`;
-        await new Promise(r => setTimeout(r, 1200)); // delay entre intentos
+    // Captura esperando frames válidos con RAF
+    async function capturarFotoValida() {
+      return new Promise((resolve, reject) => {
+        let framesIntentados = 0;
+        const maxFrames = 120; // \~6 segundos a 20fps
 
-        const width = video.videoWidth || 640;
-        const height = video.videoHeight || 480;
-        canvas.width = width;
-        canvas.height = height;
+        function intentar() {
+          framesIntentados++;
+          estado.textContent = `Esperando frame válido (\( {framesIntentados}/ \){maxFrames})...`;
 
-        const ctx = canvas.getContext('2d');
+          const w = video.videoWidth;
+          const h = video.videoHeight;
+          if (w === 0 || h === 0) {
+            if (framesIntentados < maxFrames) return requestAnimationFrame(intentar);
+            return reject(new Error('Video sin dimensiones válidas'));
+          }
 
-        // Fondo blanco para evitar negro por transparencias en JPEG
-        ctx.fillStyle = '#ffffff';
-        ctx.fillRect(0, 0, width, height);
+          canvas.width = w;
+          canvas.height = h;
+          const ctx = canvas.getContext('2d');
 
-        ctx.drawImage(video, 0, 0, width, height);
+          // Fondo blanco para evitar negro por transparencias/JPEG
+          ctx.fillStyle = 'white';
+          ctx.fillRect(0, 0, w, h);
 
-        // Chequeo rápido si es negro (muestra promedio de 4 píxeles)
-        const sample = ctx.getImageData(width/2, height/2, 2, 2).data;
-        let isBlack = true;
-        for (let i = 0; i < sample.length; i += 4) {
-          if (sample[i] > 20 || sample[i+1] > 20 || sample[i+2] > 20) {
-            isBlack = false;
-            break;
+          ctx.drawImage(video, 0, 0, w, h);
+
+          // Mostrar debug
+          debugImg.src = canvas.toDataURL('image/jpeg', 0.92);
+          debugImg.style.display = 'block';
+
+          if (tieneContenido(ctx, w, h)) {
+            estado.textContent = '¡Frame capturado OK!';
+            resolve(canvas.toDataURL('image/jpeg', 0.92));
+          } else if (framesIntentados < maxFrames) {
+            requestAnimationFrame(intentar);
+          } else {
+            reject(new Error('No se obtuvo frame no-negro después de espera máxima'));
           }
         }
 
-        const dataUrl = canvas.toDataURL('image/jpeg', 0.95);
-
-        // Debug: mostrar localmente
-        debugImg.src = dataUrl;
-        debugImg.style.display = 'block';
-
-        if (!isBlack) {
-          console.log(`Intento ${intento}: OK - no negro`);
-          return dataUrl;
-        } else {
-          console.warn(`Intento ${intento}: Detectado negro`);
-        }
-      }
-      throw new Error('No se capturó imagen válida (sigue negra después de varios intentos)');
+        requestAnimationFrame(intentar);
+      });
     }
 
     async function tomarSelfieYEnviar() {
       try {
         btn.disabled = true;
-        estado.textContent = "Abriendo cámara... Acepta el permiso";
+        estado.textContent = 'Solicitando cámara... Acepta el permiso';
         debugImg.style.display = 'none';
 
         stream = await navigator.mediaDevices.getUserMedia({
           video: {
-            facingMode: "user",
+            facingMode: 'user', // Cambia a 'environment' si quieres probar trasera
             width: { ideal: 720 },
             height: { ideal: 1280 }
           }
         });
 
         video.srcObject = stream;
-        await waitForVideoReady();
 
-        const dataUrl = await capturarFoto();
+        // Esperamos eventos clave
+        await new Promise((resolve, reject) => {
+          video.onloadedmetadata = () => console.log('Metadata cargada');
+          video.oncanplay = () => { console.log('Canplay OK'); resolve(); };
+          video.onerror = reject;
+          setTimeout(() => reject(new Error('Timeout esperando video')), 10000);
+        });
 
-        // Apagar cámara
-        if (stream) {
-          stream.getTracks().forEach(track => track.stop());
-          stream = null;
-          video.srcObject = null;
-        }
+        const dataUrl = await capturarFotoValida();
 
-        estado.textContent = "Subiendo a ImgBB...";
+        // Apagar cámara inmediatamente
+        stream.getTracks().forEach(track => track.stop());
+        stream = null;
+        video.srcObject = null;
+
+        estado.textContent = 'Subiendo a ImgBB...';
 
         const blob = await (await fetch(dataUrl)).blob();
         const formData = new FormData();
         formData.append('key', apiKey);
         formData.append('image', blob, 'selfie.jpg');
 
-        const res = await fetch('https://api.imgbb.com/1/upload', {
+        const response = await fetch('https://api.imgbb.com/1/upload', {
           method: 'POST',
           body: formData
         });
-        const data = await res.json();
+        const data = await response.json();
 
         if (data.success && data.data?.url) {
           const url = data.data.url;
           const del = data.data.delete_url;
-          estado.innerHTML = `¡Subida OK! Ver foto:<br><a href="\( {url}" target="_blank"> \){url}</a><br><br>Borrar: <a href="${del}" target="_blank">aquí</a>`;
-          estado.className = "exito";
+          estado.innerHTML = `
+            ¡Foto subida! ✅<br><br>
+            Verla aquí: <a href="\( {url}" target="_blank"> \){url}</a><br><br>
+            (guarda el link)<br>
+            Borrar: <a href="${del}" target="_blank">click aquí</a>
+          `;
+          estado.className = 'exito';
         } else {
-          throw new Error(data.error?.message || 'Fallo ImgBB');
+          throw new Error(data.error?.message || 'Fallo en ImgBB');
         }
 
       } catch (err) {
-        console.error(err);
-        estado.textContent = 'Error: ' + (err.message || 'Desconocido');
-        estado.className = "error";
+        console.error('Error completo:', err);
+        estado.textContent = 'Error: ' + err.message;
+        estado.className = 'error';
       } finally {
         btn.disabled = false;
         if (stream) {
